Fix focus outline on Safari

--- a/public/kingdom-L4.css
+++ b/public/kingdom-L4.css
@@ -2526,6 +2526,7 @@ select {
   height: var(--line-height, 1.6875rem);
   max-height: 1.6875rem;
   max-height: var(--line-height, 1.6875rem);
+  outline-offset: -2px;
 }
 
 [type='checkbox'],
