--- a/public/kingdom-forms-L1.css
+++ b/public/kingdom-forms-L1.css
@@ -2403,6 +2403,7 @@ select {
   border-style: solid;
   border-radius: 0.125rem;
   border-width: 1px;
+  outline-offset: -2px;
   padding-top: 0;
   padding-bottom: 0;
 }
