--- a/public/kingdom-forms-L2.css
+++ b/public/kingdom-forms-L2.css
@@ -2486,6 +2486,7 @@ select {
   border-style: solid;
   border-radius: 0.1875rem;
   border-width: 1px;
+  outline-offset: -2px;
   padding-top: 0;
   padding-bottom: 0;
 }
